fix(docs): add ultimate/character/name
